--- a/TRJ_linear_regression.Rnw
+++ b/TRJ_linear_regression.Rnw
@@ -59,6 +59,7 @@
 \setkeys{Gin}{width=1.1\marginparwidth} %% Sweave
 
 <<echo=FALSE>>=
+library(xray)
 library(DataExplorer)
 library(tidyverse)
 library(broom)
@@ -108,43 +109,90 @@ ggplot(data=geg) +
   geom_point(aes(x = x, y = y)) +
   xlim(xmin, xmax) +
   ylim(ymin, ymax) +
-  labs(title = "Data", x = "independent variable x", y = "responsvariable y") +
+  labs(title = "Data", x = "independent variable x", y = "response variable y") +
   JT.theme
 @
 
-\begin{marginfigure}[0cm]
+\begin{figure}
 \includegraphics[width=1\textwidth]{TRJLinReg-geg}
 \caption{ }
 \label{fig:geg}
 \setfloatalignment{b}% forces caption to be bottom-aligned
-\end{marginfigure}
+\end{figure}
 
-
+\newpage
 \section{Exploratory Data Analysis}
-Basic:
+\newthought{Basic}
 <<>>=
 dim(geg)
 summary(geg)
 object.size(geg)
 @
-\newpage
-Using the \emph{DataExplorer}-package we get the following information on \emph{missing data} and \emph{histogram} of the data (Figure~\ref{fig:hist})
+
+\newthought{Check for \emph{missing} data}
+Using the \emph{xray}-package we get information on \emph{missing data}, \emph{zeros} and \emph{NA's}.
 
 <<>>=
-pmis <- plot_missing(geg)
-pmis
+xray::anomalies(geg)
 @
-
+\newpage
+\newthought{Check for \emph{outliers} in the data}
+Histograms give an idea of the distribution of the data. However, the choice of the binwidth and the location of the bins can lead to very different graphics. Fox\sidenote{''Fox overview of regression diagnostics"} prefers density plots combined with a rug plot of the individual data (Figure~\ref{fig:hist}). The boxplots (Figure~\ref{fig:box}) and the histograms inform us about outliers within the $x_{i}$- and the $y_{i}$ measurement values.
 <<label=hist,fig=TRUE,include=FALSE, echo=FALSE>>=
-plot_histogram(geg)
+histx <- ggplot(data=geg, aes(x=x)) +
+  geom_density(col="blue", fill="blue", alpha=0.2) +
+  geom_rug() +
+  labs(title = "Density plot of independent variable x",
+       x = "Independent variable x",
+       y = "Density") +
+  JT.theme
+histy <- ggplot(data=geg, aes(x=y)) +
+  geom_density(col="blue", fill="blue", alpha=0.2) +
+  geom_rug() +
+  labs(title = "Density plot of response variable y",
+       x = "Response variable y",
+       y = "Density") +
+  JT.theme
+grid.arrange(histx, histy, ncol=2)
 @
 
-\begin{marginfigure}[-3cm]
-\includegraphics[width=1\textwidth]{TRJLinReg-hist}
-\caption{ }
+\begin{figure}
+\centering
+\includegraphics[width=0.7\textwidth]{TRJLinReg-hist}
+\caption{Density plots}
 \label{fig:hist}
 \setfloatalignment{b}% forces caption to be bottom-aligned
-\end{marginfigure}
+\end{figure}
+
+<<label=box,fig=TRUE,include=FALSE, echo=FALSE>>=
+ymin <- min(geg$x) - 0.2*(abs(min(geg$x)))
+ymax <- max(geg$x) + 0.1*(abs(max(geg$x)))
+pbox_x <- ggplot(data=geg, aes(x="", y=x)) +
+  geom_boxplot(col="blue", fill="blue", alpha=0.2) +
+  ylim(ymin, ymax) +
+  labs(title = "Boxplot x",
+       x = "",
+       y = "x") +
+  JT.theme
+ymin <- min(geg$y) - 0.2*(abs(min(geg$y)))
+ymax <- max(geg$y) + 0.1*(abs(max(geg$y)))
+pbox_y <- ggplot(data=geg, aes(x="", y=y)) + 
+  geom_boxplot(col="blue", fill="blue", alpha=0.2) +
+  ylim(ymin, ymax) +
+  labs(title = "Boxplot y",
+       x = "",
+       y = "y") +
+  JT.theme
+grid.arrange(pbox_x, pbox_y, ncol=2)
+@
+
+\begin{figure}
+\centering
+\includegraphics[width=0.7\textwidth]{TRJLinReg-box}
+\caption{Boxplots}
+\label{fig:box}
+\setfloatalignment{b}% forces caption to be bottom-aligned
+\end{figure}
 
 \chapter{The linear model}
 
@@ -200,7 +248,7 @@ predict(lineair_model, pred_xh, interval= "predict", level=0.95)
 
 \section{Checking the assumptions}
 \subsection{Constant variance of the error}
-\newthought{studentized residus}. (Figure~\ref{fig:studentized_resid}}
+\newthought{studentized residus}. (Figure~\ref{fig:studentized_resid})
 <<label=studentized_resid,fig=TRUE,include=FALSE, echo=FALSE>>=
 xmin <- min(linmod$.fitted) - 0.2*(abs(min(linmod$.fitted)))
 xmax <- max(linmod$.fitted) + 0.1*(abs(max(linmod$.fitted)))
@@ -208,7 +256,7 @@ ymin <- min(c(-3,min(linmod$.std.resid) - 0.2*(abs(min(linmod$.std.resid)))))
 ymax <- max(c(3,max(linmod$.std.resid) + 0.1*(abs(max(linmod$.std.resid)))))
 p1 <- ggplot(data=linmod, aes(x = .fitted, y = .std.resid)) +
   geom_point() +
-  geom_text(label=rownames(linmod), nudge_x = 0.2*(abs(min(linmod$.fitted))), nudge_y = 0, size=2.5) +
+  geom_text(label=rownames(linmod), nudge_x = (xmax-xmin)/50, nudge_y = 0, size=2.5) +
   geom_hline(yintercept=0, col="blue") +
   geom_hline(yintercept=-2, col="red", linetype="dashed") +
   geom_hline(yintercept=2, col="red", linetype="dashed") +
@@ -235,7 +283,7 @@ ymin <- -0.2*max(sqrt(abs(linmod$.std.resid)))
 ymax <- 1.1*max(sqrt(abs(linmod$.std.resid)))
 p3 <- ggplot(data=linmod, aes(x = .fitted, y = sqrt(abs(.std.resid)))) +
   geom_point() +
-  geom_text(label=rownames(linmod), nudge_x = 0, nudge_y = 0.1*max(sqrt(abs(linmod$.std.resid))), size=2.5) +
+  geom_text(label=rownames(linmod), nudge_x = (xmax-xmin)/50, nudge_y = 0, size=2.5) +
   xlim(xmin, xmax) +
   ylim(ymin, ymax) +
   geom_hline(yintercept=0, col="blue") +
@@ -254,7 +302,7 @@ p3
 \setfloatalignment{b}% forces caption to be bottom-aligned
 \end{marginfigure}
 
-\newthought{Normality of the studentized residues} (Figure~\ref{fig:normality})
+\subsection{Normality of the studentized residues} (Figure~\ref{fig:normality})
 <<label=normality,fig=TRUE,include=FALSE, echo=FALSE>>=
 kwantiel <- data.frame(q1=qqnorm(linmod$.std.resid, plot.it = FALSE)[[1]], q2=qqnorm(linmod$.std.resid, plot.it = FALSE)[[2]])
 xmin <- min(kwantiel$q1) - 0.2*(abs(min(kwantiel$q1)))
@@ -263,7 +311,7 @@ ymin <- min(kwantiel$q2) - 0.2*(abs(min(kwantiel$q2)))
 ymax <- max(kwantiel$q2) + 0.1*(abs(max(kwantiel$q2)))
 p2 <- ggplot(kwantiel, aes(q1, q2)) +
   geom_point(na.rm = TRUE, size=1) +
-  geom_text(label=rownames(kwantiel), nudge_x = 0.1*(abs(max(kwantiel$q2))), nudge_y = 0, size=2.5) +
+  geom_text(label=rownames(kwantiel), nudge_x = (xmax-xmin)/50, nudge_y = 0, size=2.5) +
   geom_line(aes(x=q2, y=q2), linetype="dashed") +
   xlim(min(xmin,ymin), max(xmax,ymax)) +
   ylim(min(xmin,ymin), max(xmax,ymax)) +
@@ -281,37 +329,33 @@ p2
 \setfloatalignment{b}% forces caption to be bottom-aligned
 \end{marginfigure}
 
-% 
-% <<>>=
-% shapiro.test(linmod$.std.resid)
-% ks.test(linmod$.std.resid, pnorm)
-% # if (n>6) {ad.test(linmod$.std.resid)}
-% @
-% 
-% 
-% We vinden die ook terug in de resultaten van het lineair model (Figuur~\ref{fig:Cooks_Distance}).
-% <<>>=
-% linmod$.cooksd
-% @
-% 
-% <<label=Cooks_Distance,fig=TRUE,include=FALSE, echo=FALSE>>=
-% p4 <- ggplot(linmod, aes(seq_along(.cooksd))) +
-%   geom_linerange(aes(ymin = rep(0,n), ymax = .cooksd), size=2) +
-%   xlab("Meetpunt") +
-%   ylab("Cook's distance") +
-%   ggtitle("Invloedrijke meetpunten", subtitle="Cook's distance") +
-%   JT.theme
-% p4
-% @
-% 
-% \begin{marginfigure}
-% \includegraphics[width=1\textwidth]{TRJLinReg-Cooks_Distance}
-% \caption{ }
-% \label{fig:Cooks_Distance}
-% \setfloatalignment{b}% forces caption to be bottom-aligned
-% \end{marginfigure}
-% 
-% 
+
+<<>>=
+shapiro.test(linmod$.std.resid)
+ks.test(linmod$.std.resid, pnorm)
+ad.test(linmod$.std.resid)
+@
+
+
+\subsection{Influential data points}
+<<label=Cooks_Distance,fig=TRUE,include=FALSE, echo=FALSE>>=
+p4 <- ggplot(linmod, aes(seq_along(.cooksd))) +
+  geom_linerange(aes(ymin = rep(0,n), ymax = .cooksd), size=2) +
+  xlab("Observation nr.") +
+  ylab("Cook's distance") +
+  ggtitle("Influential data points", subtitle="Cook's distance") +
+  JT.theme
+p4
+@
+
+\begin{marginfigure}
+\includegraphics[width=1\textwidth]{TRJLinReg-Cooks_Distance}
+\caption{ }
+\label{fig:Cooks_Distance}
+\setfloatalignment{b}% forces caption to be bottom-aligned
+\end{marginfigure}
+
+
 % 
 % <<label=Cooks_explained,fig=TRUE,include=FALSE, echo=FALSE>>=
 % xmin <- min(linmod$.hat) - 0.2*(abs(min(linmod$.hat)))
@@ -320,7 +364,7 @@ p2
 % ymax <- max(c(3,max(linmod$.std.resid) + 0.2*(abs(max(linmod$.std.resid)))))
 % p5 <- ggplot(linmod, aes(.hat, .std.resid)) +
 %   geom_point(aes(size=.cooksd), na.rm=TRUE) +
-%   geom_text(label=rownames(linmod), nudge_x = 0.2*(abs(min(linmod$.hat))), nudge_y = 0, size=2.5) +
+%   geom_text(label=rownames(linmod), nudge_x = (xmax-xmin)/50, nudge_y = 0, size=2.5) +
 %   xlim(xmin,xmax) +
 %   ylim(ymin,ymax) +
 %   xlab("Leverage hii") +
