--- a/TRJ_linear_regression.Rnw
+++ b/TRJ_linear_regression.Rnw
@@ -90,7 +90,7 @@ JT.theme <- theme(panel.border = element_rect(fill = NA, colour = "gray10"),
 
 \mainmatter
 
-\chapter{Data and Exploratory Data Analysis}
+\chapter{Exploratory Data Analysis}
 \section{Data input}
 Put the experimental results $(x_{i}, y_{i}$ into a data.frame called \textbf{geg} with column names \textbf{x} and \textbf{y} (Figure~\ref{fig:geg})
 
@@ -197,15 +197,15 @@ grid.arrange(pbox_x, pbox_y, ncol=2)
 \chapter{The linear model}
 
 \section{Constructing the linear model}
-Detailed information of the model is found with the \emph{broom}-package and stored in a data.frames. Graphica representation in Figur~\ref{fig:linear_model_plot}.
-<<>>=
+Detailed information of the model is more conveniently presented using the \emph{broom}-package (insteand of using the R-base command \textbf{summary}) and stored in data.frames. A graphical representation is given in Figure~\ref{fig:linear_model_plot}.
+<<echo=FALSE>>=
 lineair_model <- lm(y ~ x, data=geg)
-summary(lineair_model)
+glance_linmod <- broom::glance(lineair_model)
 tidy_linmod <- broom::tidy(lineair_model)
-tidy_linmod
 linmod <- broom::augment(lineair_model)
 @
 
+\subsection{Plot of the linear model}
 <<label=linear_model_plot,fig=TRUE,include=FALSE, echo=FALSE>>=
 ggplot(data=lineair_model$model, aes_string(x = names(lineair_model$model)[2], y = names(lineair_model$model)[1])) + 
   geom_point() +
@@ -217,12 +217,23 @@ ggplot(data=lineair_model$model, aes_string(x = names(lineair_model$model)[2], y
   JT.theme
 @
 
-\begin{marginfigure}[0cm]
-\includegraphics[width=1\textwidth]{TRJLinReg-linear_model_plot}
+\begin{figure}
+\centering
+\includegraphics[width=0.7\textwidth]{TRJLinReg-linear_model_plot}
 \caption{ }
 \label{fig:linear_model_plot}
 \setfloatalignment{b}% forces caption to be bottom-aligned
-\end{marginfigure}
+\end{figure}
+\newpage
+\subsection{Model parameters}\sidenote{What to look for: values of intercept(=$b_{0}$), slope(=$b_{1}$), p-value for hypothesis that $\beta_{1}=0$.}
+<<>>=
+tidy_linmod
+@
+
+\subsection{Quality of the model}\sidenote{What to look for: values of $R^{2}$, $R^{2}_{adj}$ should be high}
+<<>>=
+glance_linmod
+@
 
 \section{Anova analysis of the linear model}
 <<>>=
@@ -236,14 +247,26 @@ Data input required for the values of the independent variable at which predicti
 pred_xh <- data.frame(x=seq(min(geg$x), max(geg$x), length.out = 5))
 @
 
-\subsection{Prediction of $\hat{y}_{h}$}
-<<>>=
-predict(lineair_model, pred_xh, interval= "confidence", level=0.95)
+\subsection{Prediction of $\hat{y}_{h}$ at ${x}_{h}$}
+<<echo=FALSE>>= # Adding the x-values as a first columns requires turning the matrix result of "predict" into a data.frame
+pred_yh <- as.data.frame(predict(lineair_model, pred_xh, interval= "confidence", level=0.95))
+pred_yh$xh <- pred_xh$x
+pred_yh <- pred_yh[, c(4,1,2,3)]
 @
 
-\subsection{Prediction of $y_{h}$} 
 <<>>=
-predict(lineair_model, pred_xh, interval= "predict", level=0.95)
+pred_yh
+@
+
+\subsection{Prediction of next measurement $y_{h}$ at $x_{h}$} 
+<<echo=FALSE>>= # Adding the x-values as a first columns requires turning the matrix result of "predict" into a data.frame
+pred_y <- as.data.frame(predict(lineair_model, pred_xh, interval= "predict", level=0.95))
+pred_y$xh <- pred_xh$x
+pred_y <- pred_y[, c(4,1,2,3)]
+@
+
+<<>>=
+pred_y
 @
 
 \section{Checking the assumptions}
@@ -304,15 +327,22 @@ p3
 
 \subsection{Normality of the studentized residues} (Figure~\ref{fig:normality})
 <<label=normality,fig=TRUE,include=FALSE, echo=FALSE>>=
-kwantiel <- data.frame(q1=qqnorm(linmod$.std.resid, plot.it = FALSE)[[1]], q2=qqnorm(linmod$.std.resid, plot.it = FALSE)[[2]])
+kwantiel <- data.frame(q1=qqnorm(linmod$.std.resid, plot.it = FALSE)[[1]], 
+                       q2=qqnorm(linmod$.std.resid, plot.it = FALSE)[[2]])
 xmin <- min(kwantiel$q1) - 0.2*(abs(min(kwantiel$q1)))
 xmax <- max(kwantiel$q1) + 0.1*(abs(max(kwantiel$q1)))
 ymin <- min(kwantiel$q2) - 0.2*(abs(min(kwantiel$q2)))
 ymax <- max(kwantiel$q2) + 0.1*(abs(max(kwantiel$q2)))
+x1 <- as.numeric(quantile(kwantiel$q1)[2])
+x2 <- as.numeric(quantile(kwantiel$q1)[4])
+y1 <- as.numeric(quantile(kwantiel$q2)[2])
+y2 <- as.numeric(quantile(kwantiel$q2)[4])
+slope <- (y2-y1)/(x2-x1)
+interc <- y1 - x1*slope
 p2 <- ggplot(kwantiel, aes(q1, q2)) +
   geom_point(na.rm = TRUE, size=1) +
   geom_text(label=rownames(kwantiel), nudge_x = (xmax-xmin)/50, nudge_y = 0, size=2.5) +
-  geom_line(aes(x=q2, y=q2), linetype="dashed") +
+  geom_abline(slope=slope, intercept=interc, linetype="dashed", color="red") +
   xlim(min(xmin,ymin), max(xmax,ymax)) +
   ylim(min(xmin,ymin), max(xmax,ymax)) +
   xlab("Theor. Studentized Quantiles") +
